RESOLVED FIXED187819
Crash under WebCore::DocumentWriter::addData()
https://bugs.webkit.org/show_bug.cgi?id=187819
Summary Crash under WebCore::DocumentWriter::addData()
Chris Dumez
Reported 2018-07-19 14:27:11 PDT
Crash under WebCore::DocumentWriter::addData(): Thread 0 name: Dispatch queue: com.apple.main-thread Thread 0 Crashed ↩: 0 WebCore 0x00000001aa074724 WebCore::DocumentWriter::addData(char const*, unsigned long) + 56 (DocumentWriter.cpp:250) 1 WebCore 0x00000001aa0620f0 WebCore::DocumentLoader::commitData(char const*, unsigned long) + 2580 (DocumentLoader.cpp:1075) 2 WebKit 0x00000001b02039fc WebKit::WebFrameLoaderClient::committedLoad(WebCore::DocumentLoader*, char const*, int) + 60 (WebFrameLoaderClient.cpp:1021) 3 WebCore 0x00000001aa0653e0 WebCore::DocumentLoader::commitLoad(char const*, int) + 172 (DocumentLoader.cpp:967) 4 WebCore 0x00000001aa0e1958 WebCore::CachedRawResource::notifyClientsDataWasReceived(char const*, unsigned int) + 344 (CachedRawResource.cpp:136) 5 WebCore 0x00000001aa0e1680 WebCore::CachedRawResource::updateBuffer(WebCore::SharedBuffer&) + 208 (CachedRawResource.cpp:73) 6 WebCore 0x00000001aa0b72cc WebCore::SubresourceLoader::didReceiveDataOrBuffer(char const*, int, WTF::RefPtr<WebCore::SharedBuffer, WTF::DumbPtrTraits<WebCore::SharedBuffer> >&&, long long, WebCore::DataPayloadType) + 396 (SubresourceLoader.cpp:455) 7 WebCore 0x00000001aa0b73b8 WebCore::SubresourceLoader::didReceiveBuffer(WTF::Ref<WebCore::SharedBuffer, WTF::DumbPtrTraits<WebCore::SharedBuffer> >&&, long long, WebCore::DataPayloadType) + 100 (SubresourceLoader.cpp:435) 8 WebKit 0x00000001b0315cec WebKit::WebResourceLoader::didReceiveResource(WebKit::ShareableResource::Handle const&) + 276 (WebResourceLoader.cpp:214) 9 WebKit 0x00000001b0316524 WebKit::WebResourceLoader::didReceiveWebResourceLoaderMessage(IPC::Connection&, IPC::Decoder&) + 456 (HandleMessage.h:41) 10 WebKit 0x00000001b00fb594 WebKit::NetworkProcessConnection::didReceiveMessage(IPC::Connection&, IPC::Decoder&) + 520 (NetworkProcessConnection.cpp:72) 11 WebKit 0x00000001b0061188 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) + 164 (Connection.cpp:929) 12 WebKit 0x00000001b00618c4 IPC::Connection::dispatchIncomingMessages() + 748 (Connection.cpp:1044) 13 JavaScriptCore 0x00000001a7a96cb0 WTF::RunLoop::performWork() + 276 (Function.h:56) 14 JavaScriptCore 0x00000001a7a96f78 WTF::RunLoop::performWork(void*) + 36 (RunLoopCF.cpp:38) 15 CoreFoundation 0x000000019fda6e7c __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 24 (CFRunLoop.c:1980) 16 CoreFoundation 0x000000019fda6dfc __CFRunLoopDoSource0 + 88 (CFRunLoop.c:2015) 17 CoreFoundation 0x000000019fda66dc __CFRunLoopDoSources0 + 176 (CFRunLoop.c:2051) 18 CoreFoundation 0x000000019fda1580 __CFRunLoopRun + 1044 (CFRunLoop.c:2922) 19 CoreFoundation 0x000000019fda0e48 CFRunLoopRunSpecific + 436 (CFRunLoop.c:3247) 20 Foundation 0x00000001a078ee54 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 300 (NSRunLoop.m:367) 21 Foundation 0x00000001a07cb7c8 -[NSRunLoop(NSRunLoop) run] + 88 (NSRunLoop.m:389) 22 libxpc.dylib 0x000000019fa72084 _xpc_objc_main + 532 (main.m:170) 23 libxpc.dylib 0x000000019fa74ac4 xpc_main + 184 (init.c:1471) 24 com.apple.WebKit.WebContent 0x0000000100c5759c main + 380 (XPCServiceMain.mm:160) 25 libdyld.dylib 0x000000019f85f0c4 start + 4
Attachments
Patch (2.67 KB, patch)
2018-07-19 14:34 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-07-19 14:27:26 PDT
Chris Dumez
Comment 2 2018-07-19 14:34:21 PDT
WebKit Commit Bot
Comment 3 2018-07-19 16:19:39 PDT
Comment on attachment 345382 [details] Patch Clearing flags on attachment: 345382 Committed r234013: <https://trac.webkit.org/changeset/234013>
WebKit Commit Bot
Comment 4 2018-07-19 16:19:40 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2018-07-20 19:33:42 PDT
No test?
Note You need to log in before you can comment on or make changes to this bug.